// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base-service synth FargateService with default properties should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_availability_zones": {
      "AvailabilityZones": {
        "provider": "aws"
      }
    },
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_ecs_cluster": {
      "EcsCluster_97242B84": {
        "name": "EcsCluster",
        "tags": {
          "Name": "Default-EcsCluster",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_ecs_service": {
      "FargateService_14DE0490": {
        "cluster": "\${aws_ecs_cluster.EcsCluster_97242B84.name}",
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "deployment_maximum_percent": 200,
        "deployment_minimum_healthy_percent": 50,
        "desired_count": 1,
        "enable_ecs_managed_tags": false,
        "launch_type": "FARGATE",
        "lifecycle": {
          "ignore_changes": [
            "desired_count"
          ]
        },
        "name": "FargateService",
        "network_configuration": {
          "assign_public_ip": false,
          "security_groups": [
            "\${aws_security_group.FargateService_SecurityGroup_0A0E79CB.id}"
          ],
          "subnets": [
            "\${aws_subnet.Vpc_PrivateSubnet1_F6513F49.id}",
            "\${aws_subnet.Vpc_PrivateSubnet2_53755717.id}",
            "\${aws_subnet.Vpc_PrivateSubnet3_FD86EE1D.id}"
          ]
        },
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_definition": "\${aws_ecs_task_definition.FargateTaskDef_C6FB60B4.arn}"
      }
    },
    "aws_ecs_task_definition": {
      "FargateTaskDef_C6FB60B4": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"amazon/amazon-ecs-sample\\",\\"name\\":\\"web\\"}]",
        "cpu": "256",
        "family": "FargateTaskDef",
        "memory": "512",
        "network_mode": "awsvpc",
        "requires_compatibilities": [
          "FARGATE"
        ],
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_role_arn": "\${aws_iam_role.FargateTaskDef_TaskRole_0B257552.arn}"
      }
    },
    "aws_eip": {
      "Vpc_PublicSubnet1_EIP_D7E02669": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "Vpc_PublicSubnet2_EIP_3C605A87": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "Vpc_PublicSubnet3_EIP_3A666A23": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_iam_role": {
      "FargateTaskDef_TaskRole_0B257552": {
        "assume_role_policy": "\${data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4.json}",
        "name_prefix": "g-FargateTaskDefTaskRole",
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway": {
      "Vpc_IGW_D7BA715C": {
        "tags": {
          "Name": "Default/Vpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway_attachment": {
      "Vpc_VPCGW_BF912B6E": {
        "internet_gateway_id": "\${aws_internet_gateway.Vpc_IGW_D7BA715C.id}",
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      }
    },
    "aws_nat_gateway": {
      "Vpc_PublicSubnet1_NATGateway_4D7517AA": {
        "allocation_id": "\${aws_eip.Vpc_PublicSubnet1_EIP_D7E02669.allocation_id}",
        "depends_on": [
          "aws_route_table_association.Vpc_PublicSubnet1_RouteTableAssociation_97140677",
          "aws_route.Vpc_PublicSubnet1_DefaultRoute_3DA9E72A"
        ],
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet1_89B05C91.id}",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "Vpc_PublicSubnet2_NATGateway_9182C01D": {
        "allocation_id": "\${aws_eip.Vpc_PublicSubnet2_EIP_3C605A87.allocation_id}",
        "depends_on": [
          "aws_route_table_association.Vpc_PublicSubnet2_RouteTableAssociation_DD5762D8",
          "aws_route.Vpc_PublicSubnet2_DefaultRoute_97F91067"
        ],
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet2_F07C676D.id}",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "Vpc_PublicSubnet3_NATGateway_7640CD1D": {
        "allocation_id": "\${aws_eip.Vpc_PublicSubnet3_EIP_3A666A23.allocation_id}",
        "depends_on": [
          "aws_route_table_association.Vpc_PublicSubnet3_RouteTableAssociation_1F1EDF02",
          "aws_route.Vpc_PublicSubnet3_DefaultRoute_4697774F"
        ],
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet3_18B4CDCB.id}",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_route": {
      "Vpc_PrivateSubnet1_DefaultRoute_BE02A9ED": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.Vpc_PublicSubnet1_NATGateway_4D7517AA.id}",
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet1_RouteTable_B2C5B500.id}"
      },
      "Vpc_PrivateSubnet2_DefaultRoute_060D2087": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.Vpc_PublicSubnet2_NATGateway_9182C01D.id}",
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet2_RouteTable_A678073B.id}"
      },
      "Vpc_PrivateSubnet3_DefaultRoute_94B74F0D": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.Vpc_PublicSubnet3_NATGateway_7640CD1D.id}",
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet3_RouteTable_D98824C7.id}"
      },
      "Vpc_PublicSubnet1_DefaultRoute_3DA9E72A": {
        "depends_on": [
          "aws_internet_gateway_attachment.Vpc_VPCGW_BF912B6E"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.Vpc_IGW_D7BA715C.id}",
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet1_RouteTable_6C95E38E.id}"
      },
      "Vpc_PublicSubnet2_DefaultRoute_97F91067": {
        "depends_on": [
          "aws_internet_gateway_attachment.Vpc_VPCGW_BF912B6E"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.Vpc_IGW_D7BA715C.id}",
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet2_RouteTable_94F7E489.id}"
      },
      "Vpc_PublicSubnet3_DefaultRoute_4697774F": {
        "depends_on": [
          "aws_internet_gateway_attachment.Vpc_VPCGW_BF912B6E"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.Vpc_IGW_D7BA715C.id}",
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet3_RouteTable_93458DBB.id}"
      }
    },
    "aws_route_table": {
      "Vpc_PrivateSubnet1_RouteTable_B2C5B500": {
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PrivateSubnet2_RouteTable_A678073B": {
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PrivateSubnet3_RouteTable_D98824C7": {
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet1_RouteTable_6C95E38E": {
        "tags": {
          "Name": "Default/Vpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet2_RouteTable_94F7E489": {
        "tags": {
          "Name": "Default/Vpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet3_RouteTable_93458DBB": {
        "tags": {
          "Name": "Default/Vpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      }
    },
    "aws_route_table_association": {
      "Vpc_PrivateSubnet1_RouteTableAssociation_70C59FA6": {
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet1_RouteTable_B2C5B500.id}",
        "subnet_id": "\${aws_subnet.Vpc_PrivateSubnet1_F6513F49.id}"
      },
      "Vpc_PrivateSubnet2_RouteTableAssociation_A89CAD56": {
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet2_RouteTable_A678073B.id}",
        "subnet_id": "\${aws_subnet.Vpc_PrivateSubnet2_53755717.id}"
      },
      "Vpc_PrivateSubnet3_RouteTableAssociation_16BDDC43": {
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet3_RouteTable_D98824C7.id}",
        "subnet_id": "\${aws_subnet.Vpc_PrivateSubnet3_FD86EE1D.id}"
      },
      "Vpc_PublicSubnet1_RouteTableAssociation_97140677": {
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet1_RouteTable_6C95E38E.id}",
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet1_89B05C91.id}"
      },
      "Vpc_PublicSubnet2_RouteTableAssociation_DD5762D8": {
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet2_RouteTable_94F7E489.id}",
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet2_F07C676D.id}"
      },
      "Vpc_PublicSubnet3_RouteTableAssociation_1F1EDF02": {
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet3_RouteTable_93458DBB.id}",
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet3_18B4CDCB.id}"
      }
    },
    "aws_security_group": {
      "FargateService_SecurityGroup_0A0E79CB": {
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "description": "Default/FargateService/SecurityGroup",
        "egress": [
          {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic by default",
            "from_port": 0,
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_groups": null,
            "self": null,
            "to_port": 0
          }
        ],
        "name": "gFargateServiceSecurityGroup195E9D03",
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      }
    },
    "aws_subnet": {
      "Vpc_PrivateSubnet1_F6513F49": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.96.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet1",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PrivateSubnet2_53755717": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.128.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet2",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PrivateSubnet3_FD86EE1D": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.160.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet3",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet1_89B05C91": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.0.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/Vpc/PublicSubnet1",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet2_F07C676D": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.32.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/Vpc/PublicSubnet2",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet3_18B4CDCB": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.64.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/Vpc/PublicSubnet3",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      }
    },
    "aws_vpc": {
      "Vpc_8378EB38": {
        "cidr_block": "10.0.0.0/16",
        "enable_dns_hostnames": true,
        "enable_dns_support": true,
        "instance_tenancy": "default",
        "tags": {
          "Name": "Default/Vpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`base-service synth FargateService with service connect and TLS should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_availability_zones": {
      "AvailabilityZones": {
        "provider": "aws"
      }
    },
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "KmsKey_Policy_A63F6E4F": {
        "statement": [
          {
            "actions": [
              "kms:*"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          }
        ]
      },
      "Role_AssumeRolePolicy_B27E8126": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "TaskDef_TaskRole_AssumeRolePolicy_8FE14147": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs": {
        "service_name": "ecs"
      },
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_ecs_cluster": {
      "EcsCluster_97242B84": {
        "name": "EcsCluster",
        "tags": {
          "Name": "Default-EcsCluster",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_ecs_service": {
      "Service_DBC79909": {
        "cluster": "\${aws_ecs_cluster.EcsCluster_97242B84.name}",
        "depends_on": [
          "data.aws_iam_policy_document.TaskDef_TaskRole_AssumeRolePolicy_8FE14147",
          "aws_iam_role.TaskDef_TaskRole_1EDB4A67"
        ],
        "deployment_maximum_percent": 200,
        "deployment_minimum_healthy_percent": 50,
        "desired_count": 1,
        "enable_ecs_managed_tags": false,
        "launch_type": "FARGATE",
        "lifecycle": {
          "ignore_changes": [
            "desired_count"
          ]
        },
        "name": "Service",
        "network_configuration": {
          "assign_public_ip": false,
          "security_groups": [
            "\${aws_security_group.Service_SecurityGroup_C96ED6A7.id}"
          ],
          "subnets": [
            "\${aws_subnet.Vpc_PrivateSubnet1_F6513F49.id}",
            "\${aws_subnet.Vpc_PrivateSubnet2_53755717.id}",
            "\${aws_subnet.Vpc_PrivateSubnet3_FD86EE1D.id}"
          ]
        },
        "service_connect_configuration": {
          "enabled": true,
          "namespace": "test namespace",
          "service": [
            {
              "client_alias": {
                "port": 80
              },
              "port_name": "api",
              "tls": {
                "issuer_cert_authority": {
                  "aws_pca_authority_arn": "arn:aws:acm-pca:us-east-1:123456789012:certificate-authority/123456789012"
                },
                "kms_key": "\${aws_kms_key.KmsKey_46693ADD.arn}",
                "role_arn": "\${aws_iam_role.Role_1ABCC5F0.arn}"
              }
            }
          ]
        },
        "tags": {
          "Name": "Default-Service",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_definition": "\${aws_ecs_task_definition.TaskDef_54694570.arn}"
      }
    },
    "aws_ecs_task_definition": {
      "TaskDef_54694570": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"amazon/amazon-ecs-sample\\",\\"name\\":\\"Web\\",\\"portMappings\\":[{\\"containerPort\\":80,\\"protocol\\":\\"tcp\\",\\"name\\":\\"api\\"}]}]",
        "cpu": "256",
        "family": "TaskDef",
        "memory": "512",
        "network_mode": "awsvpc",
        "requires_compatibilities": [
          "FARGATE"
        ],
        "tags": {
          "Name": "Default-TaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_role_arn": "\${aws_iam_role.TaskDef_TaskRole_1EDB4A67.arn}"
      }
    },
    "aws_eip": {
      "Vpc_PublicSubnet1_EIP_D7E02669": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "Vpc_PublicSubnet2_EIP_3C605A87": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "Vpc_PublicSubnet3_EIP_3A666A23": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_iam_role": {
      "Role_1ABCC5F0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.Role_AssumeRolePolicy_B27E8126.json}",
        "name_prefix": "g-Role",
        "tags": {
          "Name": "Default-Role",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "TaskDef_TaskRole_1EDB4A67": {
        "assume_role_policy": "\${data.aws_iam_policy_document.TaskDef_TaskRole_AssumeRolePolicy_8FE14147.json}",
        "name_prefix": "g-TaskDefTaskRole",
        "tags": {
          "Name": "Default-TaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway": {
      "Vpc_IGW_D7BA715C": {
        "tags": {
          "Name": "Default/Vpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway_attachment": {
      "Vpc_VPCGW_BF912B6E": {
        "internet_gateway_id": "\${aws_internet_gateway.Vpc_IGW_D7BA715C.id}",
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      }
    },
    "aws_kms_key": {
      "KmsKey_46693ADD": {
        "policy": "\${data.aws_iam_policy_document.KmsKey_Policy_A63F6E4F.json}",
        "tags": {
          "Name": "Default-KmsKey",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_nat_gateway": {
      "Vpc_PublicSubnet1_NATGateway_4D7517AA": {
        "allocation_id": "\${aws_eip.Vpc_PublicSubnet1_EIP_D7E02669.allocation_id}",
        "depends_on": [
          "aws_route_table_association.Vpc_PublicSubnet1_RouteTableAssociation_97140677",
          "aws_route.Vpc_PublicSubnet1_DefaultRoute_3DA9E72A"
        ],
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet1_89B05C91.id}",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "Vpc_PublicSubnet2_NATGateway_9182C01D": {
        "allocation_id": "\${aws_eip.Vpc_PublicSubnet2_EIP_3C605A87.allocation_id}",
        "depends_on": [
          "aws_route_table_association.Vpc_PublicSubnet2_RouteTableAssociation_DD5762D8",
          "aws_route.Vpc_PublicSubnet2_DefaultRoute_97F91067"
        ],
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet2_F07C676D.id}",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "Vpc_PublicSubnet3_NATGateway_7640CD1D": {
        "allocation_id": "\${aws_eip.Vpc_PublicSubnet3_EIP_3A666A23.allocation_id}",
        "depends_on": [
          "aws_route_table_association.Vpc_PublicSubnet3_RouteTableAssociation_1F1EDF02",
          "aws_route.Vpc_PublicSubnet3_DefaultRoute_4697774F"
        ],
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet3_18B4CDCB.id}",
        "tags": {
          "Name": "Default/Vpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_route": {
      "Vpc_PrivateSubnet1_DefaultRoute_BE02A9ED": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.Vpc_PublicSubnet1_NATGateway_4D7517AA.id}",
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet1_RouteTable_B2C5B500.id}"
      },
      "Vpc_PrivateSubnet2_DefaultRoute_060D2087": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.Vpc_PublicSubnet2_NATGateway_9182C01D.id}",
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet2_RouteTable_A678073B.id}"
      },
      "Vpc_PrivateSubnet3_DefaultRoute_94B74F0D": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.Vpc_PublicSubnet3_NATGateway_7640CD1D.id}",
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet3_RouteTable_D98824C7.id}"
      },
      "Vpc_PublicSubnet1_DefaultRoute_3DA9E72A": {
        "depends_on": [
          "aws_internet_gateway_attachment.Vpc_VPCGW_BF912B6E"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.Vpc_IGW_D7BA715C.id}",
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet1_RouteTable_6C95E38E.id}"
      },
      "Vpc_PublicSubnet2_DefaultRoute_97F91067": {
        "depends_on": [
          "aws_internet_gateway_attachment.Vpc_VPCGW_BF912B6E"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.Vpc_IGW_D7BA715C.id}",
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet2_RouteTable_94F7E489.id}"
      },
      "Vpc_PublicSubnet3_DefaultRoute_4697774F": {
        "depends_on": [
          "aws_internet_gateway_attachment.Vpc_VPCGW_BF912B6E"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.Vpc_IGW_D7BA715C.id}",
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet3_RouteTable_93458DBB.id}"
      }
    },
    "aws_route_table": {
      "Vpc_PrivateSubnet1_RouteTable_B2C5B500": {
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PrivateSubnet2_RouteTable_A678073B": {
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PrivateSubnet3_RouteTable_D98824C7": {
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet1_RouteTable_6C95E38E": {
        "tags": {
          "Name": "Default/Vpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet2_RouteTable_94F7E489": {
        "tags": {
          "Name": "Default/Vpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet3_RouteTable_93458DBB": {
        "tags": {
          "Name": "Default/Vpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      }
    },
    "aws_route_table_association": {
      "Vpc_PrivateSubnet1_RouteTableAssociation_70C59FA6": {
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet1_RouteTable_B2C5B500.id}",
        "subnet_id": "\${aws_subnet.Vpc_PrivateSubnet1_F6513F49.id}"
      },
      "Vpc_PrivateSubnet2_RouteTableAssociation_A89CAD56": {
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet2_RouteTable_A678073B.id}",
        "subnet_id": "\${aws_subnet.Vpc_PrivateSubnet2_53755717.id}"
      },
      "Vpc_PrivateSubnet3_RouteTableAssociation_16BDDC43": {
        "route_table_id": "\${aws_route_table.Vpc_PrivateSubnet3_RouteTable_D98824C7.id}",
        "subnet_id": "\${aws_subnet.Vpc_PrivateSubnet3_FD86EE1D.id}"
      },
      "Vpc_PublicSubnet1_RouteTableAssociation_97140677": {
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet1_RouteTable_6C95E38E.id}",
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet1_89B05C91.id}"
      },
      "Vpc_PublicSubnet2_RouteTableAssociation_DD5762D8": {
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet2_RouteTable_94F7E489.id}",
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet2_F07C676D.id}"
      },
      "Vpc_PublicSubnet3_RouteTableAssociation_1F1EDF02": {
        "route_table_id": "\${aws_route_table.Vpc_PublicSubnet3_RouteTable_93458DBB.id}",
        "subnet_id": "\${aws_subnet.Vpc_PublicSubnet3_18B4CDCB.id}"
      }
    },
    "aws_security_group": {
      "Service_SecurityGroup_C96ED6A7": {
        "depends_on": [
          "data.aws_iam_policy_document.TaskDef_TaskRole_AssumeRolePolicy_8FE14147",
          "aws_iam_role.TaskDef_TaskRole_1EDB4A67"
        ],
        "description": "Default/Service/SecurityGroup",
        "egress": [
          {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic by default",
            "from_port": 0,
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_groups": null,
            "self": null,
            "to_port": 0
          }
        ],
        "name": "gServiceSecurityGroup263BC618",
        "tags": {
          "Name": "Default-Service",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      }
    },
    "aws_subnet": {
      "Vpc_PrivateSubnet1_F6513F49": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.96.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet1",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PrivateSubnet2_53755717": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.128.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet2",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PrivateSubnet3_FD86EE1D": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.160.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/Vpc/PrivateSubnet3",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet1_89B05C91": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.0.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/Vpc/PublicSubnet1",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet2_F07C676D": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.32.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/Vpc/PublicSubnet2",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      },
      "Vpc_PublicSubnet3_18B4CDCB": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.64.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/Vpc/PublicSubnet3",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.Vpc_8378EB38.id}"
      }
    },
    "aws_vpc": {
      "Vpc_8378EB38": {
        "cidr_block": "10.0.0.0/16",
        "enable_dns_hostnames": true,
        "enable_dns_support": true,
        "instance_tenancy": "default",
        "tags": {
          "Name": "Default/Vpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;
